@@ -3,17 +3,17 @@ package it.pagopa.pn.deliverypushvalidator.exceptions;
 import it.pagopa.pn.commons.exceptions.dto.ProblemError;
 import it.pagopa.pn.deliverypushvalidator.exception.PnDeliveryPushValidatorExceptionCodes;
 import it.pagopa.pn.deliverypushvalidator.exception.PnLookupAddressValidationFailedException;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class PnLookupAddressValidationFailedExceptionTest {
 
     @Test
-    public void testExceptionMessageAndDetails() {
+    void testExceptionMessageAndDetails() {
         ProblemError error = new ProblemError();
         error.setCode(PnDeliveryPushValidatorExceptionCodes.NotificationRefusedErrorCodeInt.ADDRESS_NOT_FOUND.getValue());
         error.setDetail("Validazione fallita. Problemi nella ricerca sui registri pubblici");
@@ -22,8 +22,8 @@ public class PnLookupAddressValidationFailedExceptionTest {
 
         assertNotNull(exception);
         assertNotNull(exception.getProblem());
-        assertEquals("ADDRESS_NOT_FOUND", exception.getProblem().getErrors().get(0).getCode());
-        assertEquals("Validazione fallita. Problemi nella ricerca sui registri pubblici", exception.getProblem().getDetail());
+        Assertions.assertEquals("ADDRESS_NOT_FOUND", exception.getProblem().getErrors().getFirst().getCode());
+        Assertions.assertEquals("Validazione fallita. Problemi nella ricerca sui registri pubblici", exception.getProblem().getDetail());
     }
 
 }
